--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "endroid/qr-code": "^5.1",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "plesk/ext-laravel-integration": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
