--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "endroid/qr-code": "^5.1",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
