--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "plesk/ext-laravel-integration": "*"
     },
     "require-dev": {
